# Providence

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  doc-review.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.clinerules/: doc-drift-review.md
.clinerules/workflows/: doc-drift-review.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: adr-needed.md  bug.md  config.yml  task.md
.github/workflows/: ci.yml  codeql.yml
adapters/config-loader/: Cargo.toml
adapters/config-loader/src/: authoring.rs  error.rs  lib.rs  merge.rs
adapters/renderer/: Cargo.toml
adapters/renderer/src/: camera.rs  color.rs  gpu.rs  headless.rs  highlight.rs  input.rs  lib.rs  mesh.rs  pick.rs  water.rs  window.rs
config/: default.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: hash.rs  lib.rs  rng.rs  state.rs
crates/core/src/terrain/: derive.rs  feature.rs  field.rs  mod.rs  shape.rs  world.rs  worldgen.rs
crates/core/tests/: replay.rs  terrain_invariant.rs
crates/ports/: Cargo.toml
crates/ports/src/: lib.rs
crates/ports/tests/: terrain_frame.rs
crates/providence/: Cargo.toml
crates/providence/src/: main.rs
crates/providence/tests/: e2e.rs
docs/: 00-vision.md  10-game-design.md  20-architecture.md  30-ai-agent-contract.md  40-parameterisation.md  50-llm-opponent.md  60-constraints.md  70-glossary.md  README.md
docs/contracts/: README.md  config.schema.json
docs/decisions/: 0001-adopt-architecture-decision-records.md  0002-llm-as-strategic-advisor.md  0003-parameterisation-first.md  0004-deterministic-core-ports-and-adapters.md  0005-macbook-only-offline-runtime.md  0006-rust-language-and-runtime.md  0007-wgpu-rendering-framework.md  0008-toml-config-format-types-first-schema.md  0009-enforcement-tooling-and-the-gate.md  0010-branch-workflow-and-ci.md  0011-advisory-code-scanning.md  0012-project-management-on-github.md  0013-advisory-doc-drift-review-on-push.md  0014-ollama-local-llm-runtime.md  0015-debug-hud-ui-layer.md  0016-exploration-lane-and-subsystem-isolation.md  0017-vertex-heightfield-terrain.md  0022-interactive-shaping-seam-input-command-simdriver.md  0023-derived-terrain-snapshot-per-vertex-type.md  README.md  template.md
scripts/doc-review/: post_issues.py  run.sh
scripts/hooks/: pre-push
xtask/: Cargo.toml
xtask/src/: boundary.rs  coverage.rs  doc_review.rs  keys.rs  magic.rs  main.rs  run.rs  schema.rs  tools.rs
