[package]
name = "providence-renderer"
description = "Workbench renderer adapter: presents terrain via RendererPort (wgpu/winit land in issue #8 Phase 1; ADR 0020)"
version.workspace = true
edition.workspace = true
publish.workspace = true

# Adapters depend on port interfaces + config data types; never on other
# adapters and never on the core (docs/20-architecture.md §5 rule 3, ADR 0020).
# The GPU libraries (wgpu/winit/…) arrive in issue #8 Phase 1, confined to this
# one crate by the boundary checker.
[dependencies]
providence-ports = { workspace = true }
providence-config = { workspace = true }

[lints]
workspace = true
