[package]
name = "providence-core"
description = "The pure, deterministic simulation core (no_std; imports only config data types)"
version.workspace = true
edition.workspace = true
publish.workspace = true

# The core imports ONLY config-layer data types (docs/20-architecture.md §5
# rule 1); the boundary checker fails the gate on anything else.
[dependencies]
providence-config = { workspace = true }

[lints]
workspace = true
